cargo-features = ["edition2024"]

[package]
name = "cli-toolbelt"
version = "0.1.1"
description = "A CLI tool to facilitate access to frequently used commands and scripts"
edition = "2021"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
dirs = "6.0.0"
serde = "1.0.217"
serde_derive = "1.0.217"
toml = "1.1.3"
